Issue #10756: atexit normalizes the exception before displaying it.